tests/res/arrays/error_null_index.say
print([1][null]); // error: Invalid array index: null